--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "11ty-site-build",
+  "name": "latewerks",
   "version": "1.0.0",
-  "description": "",
+  "description": "portfolio and sketchbook library",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Lee Ely",
+  "license": "MIT",
   "devDependencies": {
     "@11ty/eleventy": "^0.9.0",
     "tachyons": "^4.10.0"
