--- a/package.json
+++ b/package.json
@@ -13,5 +13,7 @@
     "@11ty/eleventy": "^0.9.0",
     "tachyons": "^4.10.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "eleventy-plugin-lazyimages": "^1.0.3"
+  }
 }
