--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "tachyons": "^4.10.0"
   },
   "dependencies": {
-    "eleventy-plugin-lazyimages": "^1.0.3"
+    "eleventy-plugin-lazyimages": "^1.0.3",
+    "fast-glob": "^3.1.0"
   }
 }
